RESOLVED FIXED114769
Content inside frames and scrollbars in overflow areas hit-tests incorrectly when the WKView has a header
https://bugs.webkit.org/show_bug.cgi?id=114769
Summary Content inside frames and scrollbars in overflow areas hit-tests incorrectly ...
Beth Dakin
Reported 2013-04-17 15:13:09 PDT
Content inside frames and scrollbars in overflow areas hit-tests incorrectly when the WKView has a header. <rdar://problem/13581721>
Attachments
Patch (7.65 KB, patch)
2013-04-17 15:34 PDT, Beth Dakin
no flags
Patch (6.95 KB, patch)
2013-04-17 16:15 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2013-04-17 15:34:12 PDT
Simon Fraser (smfr)
Comment 2 2013-04-17 15:51:31 PDT
Comment on attachment 198619 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=198619&action=review > LayoutTests/platform/mac/platform/mac-wk2/tiled-drawing/header-and-footer-hit-testing-in-frame-expected.txt:16 > +layer at (0,0) size 785x600 > + RenderView at (0,0) size 785x600 > +layer at (0,0) size 785x600 > + RenderBlock {HTML} at (0,0) size 785x600 > + RenderBody {BODY} at (8,8) size 769x584 > + RenderPartObject {IFRAME} at (0,0) size 600x300 > + layer at (0,0) size 600x300 > + RenderView at (0,0) size 600x300 > + layer at (0,0) size 600x300 > + RenderBlock {HTML} at (0,0) size 600x300 > + RenderBody {BODY} at (8,8) size 584x284 > + RenderBlock {DIV} at (0,0) size 25x25 [bgcolor=#800080] > + RenderBlock {DIV} at (0,25) size 584x18 > + RenderText {#text} at (0,0) size 33x18 > + text run at (0,0) width 33: "Pass!" > + RenderText {#text} at (0,0) size 0x0 This should be a text test.
Beth Dakin
Comment 3 2013-04-17 16:13:07 PDT
(In reply to comment #2) > (From update of attachment 198619 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=198619&action=review > > > LayoutTests/platform/mac/platform/mac-wk2/tiled-drawing/header-and-footer-hit-testing-in-frame-expected.txt:16 > > +layer at (0,0) size 785x600 > > + RenderView at (0,0) size 785x600 > > +layer at (0,0) size 785x600 > > + RenderBlock {HTML} at (0,0) size 785x600 > > + RenderBody {BODY} at (8,8) size 769x584 > > + RenderPartObject {IFRAME} at (0,0) size 600x300 > > + layer at (0,0) size 600x300 > > + RenderView at (0,0) size 600x300 > > + layer at (0,0) size 600x300 > > + RenderBlock {HTML} at (0,0) size 600x300 > > + RenderBody {BODY} at (8,8) size 584x284 > > + RenderBlock {DIV} at (0,0) size 25x25 [bgcolor=#800080] > > + RenderBlock {DIV} at (0,25) size 584x18 > > + RenderText {#text} at (0,0) size 33x18 > > + text run at (0,0) width 33: "Pass!" > > + RenderText {#text} at (0,0) size 0x0 > > This should be a text test. Yes, it should! This was much easier to do than I initially though. New patch in a moment.
Beth Dakin
Comment 4 2013-04-17 16:15:08 PDT
Beth Dakin
Comment 5 2013-04-17 16:22:54 PDT
Note You need to log in before you can comment on or make changes to this bug.