Content inside frames and scrollbars in overflow areas hit-tests incorrectly when the WKView has a header https://bugs.webkit.org/show_bug.cgi?id=114769

Reviewed by Simon Fraser.

Source/WebCore:

convertToRenderer() and convertFromRenderer() need to factor in the headerHeight,
much like all of the conversion functions on ScrollView.
* page/FrameView.cpp:
(WebCore::FrameView::convertFromRenderer):
(WebCore::FrameView::convertToRenderer):

The scrollPosition equivalent of the existing scrollOffsetRelativeToDocument()
function.
* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollPositionRelativeToDocument):
* platform/ScrollView.h:
(ScrollView):

LayoutTests:

* platform/mac-wk2/tiled-drawing/header-and-footer-hit-testing-in-frame-expected.txt: Added.
* platform/mac-wk2/tiled-drawing/header-and-footer-hit-testing-in-frame.html: Added.
* platform/mac-wk2/tiled-drawing/resources/iframe-to-hit-test.html: Added.



Canonical link: https://commits.webkit.org/133167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148643 268f45cc-cd09-0410-ab3c-d52691b4dbfc